--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
-        app:srcCompat="@drawable/ic_logo_orange" />
+        app:srcCompat="@drawable/cruise_icon" />
 
     <LinearLayout
         android:layout_below="@+id/fragment_login_logo_image"
