--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:background="@color/colorPrimary"
+        android:id="@+id/view" />
+
+    <stoyanoff.oceanbnb_android.util.RoundedImageView
+        android:id="@+id/fragment_profile_roundedImageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="64dp"
+        android:layout_alignBottom="@+id/view"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:id="@+id/fragment_profile_edit_button"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        app:srcCompat="@drawable/ic_mode_edit_white_24px"
+        android:background="@android:color/transparent"
+        android:layout_marginTop="11dp"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/fragment_profile_roundedImageView"
+        android:layout_marginStart="52dp" />
+
+    <ImageView
+        android:id="@+id/fragment_profile_logout_image_view"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        app:srcCompat="@drawable/ic_exit_to_app_black_24dp"
+        android:layout_marginEnd="11dp"
+        android:layout_alignBottom="@+id/fragment_profile_edit_button"
+        android:layout_alignParentEnd="true" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:orientation="vertical"
+        android:layout_below="@+id/view"
+        android:layout_alignParentStart="true">
+        <TextView
+            android:id="@+id/fragment_profile_name_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name"/>
+        <TextView
+            android:id="@+id/fragment_profile_email_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email"/>
+
+        <TextView
+            android:id="@+id/fragment_profile_gender_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Gender"/>
+        <TextView
+            android:id="@+id/fragment_profile_city_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="City"/>
+        <TextView
+            android:id="@+id/fragment_profile_description_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Description"/>
+    </LinearLayout>
+
+
+
+
+
+</RelativeLayout>
