--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -39,6 +39,15 @@
         android:layout_alignBottom="@+id/fragment_profile_edit_button"
         android:layout_alignParentEnd="true" />
 
+    <ImageView
+        android:id="@+id/fragment_profile_cruises_image_view"
+        app:srcCompat="@drawable/ic_rowing_black_24dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_alignTop="@+id/fragment_profile_edit_button"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="22dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
