implemented cruise, ship and cruise list design

--- a/app/src/main/res/layout/fragment_roll_call.xml
+++ b/app/src/main/res/layout/fragment_roll_call.xml
@@ -13,6 +13,8 @@
         android:text="@string/fragment_roll_call_add_me_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:textColor="@android:color/white"
+        android:background="@drawable/rounded_edge_button"/>
 
 </RelativeLayout>
