--- a/app/src/main/res/layout/fragment_cruise_details.xml
+++ b/app/src/main/res/layout/fragment_cruise_details.xml
@@ -5,6 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:src="@drawable/cruise"
+        android:scaleType="centerCrop"/>
+
     <TextView
         android:id="@+id/fragment_cruise_details_cruise_name_text_view"
         android:layout_width="match_parent"
@@ -12,7 +18,9 @@
         android:gravity="center"
         android:text="@string/fragment_cuise_details_cruise_name_placeholder"
         android:textSize="20sp"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="10dp"
+        android:textColor="@color/colorPrimary"
+        />
 
 
     <LinearLayout
@@ -54,10 +62,35 @@
     </LinearLayout>
     </LinearLayout>
 
-    <com.google.android.gms.maps.MapView
+    <TextView
+        android:layout_marginStart="20dp"
+        android:text="@string/fragment_cruise_details_destinations_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:textColor="@color/colorPrimary"/>
+    <android.support.v7.widget.CardView
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <com.google.android.gms.maps.MapView
         android:id="@+id/fragment_cruise_details_mapview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-
+        <View
+            android:id="@+id/view2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/map_frame" />
+    </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
