--- a/app/src/main/res/layout/list_item_cruise.xml
+++ b/app/src/main/res/layout/list_item_cruise.xml
@@ -8,10 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textSize="17sp"
-        android:layout_margin="10dp"
+        android:layout_margin="15dp"
         android:maxLines="1"
         android:ellipsize="end"
-        android:text="Cruise name"/>
+        android:text="@string/list_item_cruise_cruise_name_placeholder"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
