--- a/app/src/main/res/layout/fragment_roll_call.xml
+++ b/app/src/main/res/layout/fragment_roll_call.xml
@@ -6,7 +6,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragment_roll_call_users_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_above="@+id/fragment_roll_call_add_remove_button"/>
 
     <Button
         android:id="@+id/fragment_roll_call_add_remove_button"
